--- a/session2/vite-react/.gitignore
+++ b/session2/vite-react/.gitignore
@@ -11,6 +11,7 @@ deps_temp_757b5fd3
 node_modules
 dist
 dist-ssr
+tailwind.config.js
 *.local
 
 # Editor directories and files
@@ -23,3 +24,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+
